fixed horizontal scroll

--- a/Menu.css
+++ b/Menu.css
@@ -11,6 +11,7 @@ body{
     width: 100vw;
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
 
 }
 /*header*/
