--- a/bakery.css
+++ b/bakery.css
@@ -11,6 +11,7 @@ body{
     width: 100vw;
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
 
 }
 /*header*/
@@ -112,6 +113,7 @@ a[href*="Menu"] button{
 footer{
     background-color: #F5F5F5;
     margin-top: 10%;
+    width: 100%;
 }
 .information{
     display: flex;
@@ -153,6 +155,7 @@ input[type^="email"]{
 }
 .email_button{
     position: relative;
+    right: 19%;
 }
 /*cart*/
 .topLine .cart {
