--- a/hotMeal.css
+++ b/hotMeal.css
@@ -11,6 +11,7 @@ body{
     width: 100vw;
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
 
 }
 /*header*/
@@ -142,6 +143,7 @@ a[href*="Menu"] button{
 footer{
     background-color: #F5F5F5;
     margin-top: 10%;
+    width: 100%;
 }
 .information{
     display: flex;
@@ -183,6 +185,7 @@ input[type^="email"]{
 }
 .email_button{
     position: relative;
+    right: 15%;
 }
 
 
